feat(api): GROW-66 | adjust create cool, create meeting, add location on cool
