# docs/swagger.json
@@ -2793,9 +2793,11 @@
             "type": "object",
             "required": [
                 "coolCode",
+                "locationType",
                 "meetingDate",
                 "meetingEndAt",
-                "meetingStartAt"
+                "meetingStartAt",
+                "topic"
             ],
             "properties": {
                 "attendance": {
@@ -2806,6 +2808,16 @@
                 },
                 "description": {
                     "type": "string"
+                },
+                "locationName": {
+                    "type": "string"
+                },
+                "locationType": {
+                    "type": "string",
+                    "enum": [
+                        "online",
+                        "offline"
+                    ]
                 },
                 "markAttendanceNow": {
                     "type": "boolean"
@@ -2821,6 +2833,9 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "topic": {
+                    "type": "string"
                 }
             }
         },
@@ -2834,6 +2849,12 @@
                     "type": "string"
                 },
                 "description": {
+                    "type": "string"
+                },
+                "locationName": {
+                    "type": "string"
+                },
+                "locationType": {
                     "type": "string"
                 },
                 "meetingDate": {
@@ -2859,6 +2880,9 @@
                     "items": {
                         "$ref": "#/definitions/models.CreateNewJoinerAttendanceResponse"
                     }
+                },
+                "topic": {
+                    "type": "string"
                 },
                 "type": {
                     "type": "string"
